# inkling_ebooks

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  schema.sql
alembic/: env.py
alembic/versions/: 28d0241a23d9_baseline.py
app/: main.py
app/api/v1/: books.py
app/core/: config.py
app/crud/: book.py
app/db/: session.py
app/models/: __init__.py  association_tables.py  author.py  book.py  bookshelf.py  format.py  language.py  subject.py
app/schemas/: __init__.py  author.py  book.py  bookshelf.py  format.py  language.py  subject.py
