[tool.poetry]
name = "inkling-ebooks"
version = "0.1.0"
description = "Gutenberg Ebooks API"
authors = ["VishnuDileesh <mail@vishnudileesh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"


[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload"
prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
